# xrd

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FORMAT.bash  FORMAT.sh  LICENSE  MAKE.bash  Makefile  Makefile.py  Makefile.spec  README.md  SECURITY.md  cmds.py  cnf.toml  cnf.xrd  conf.ini  enums.py  init.py  loops.rs  main.rs  messagegen.py  messages.py  messages.rs  phases.py  pluginsutil.py  sectorum.py  structs.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
plugins/: sectorum.py
