[[bin]]
name = "xrd"
test = false
bench = false
path = "./main.rs"

[package]
name = "xrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
regex = "1.5.5"
serde_derive = "1.0.136"
aho-corasick = "0.7.18"
byteorder = "1.4.3"
toml = "0.5.8"
glob = "0.3.0"
