[[bin]]
name = "xrd"
test = false
bench = false
path = "./main.rs"

[package]
name = "xrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
byteorder = "1.4.3"
glob = "0.3.0"
crossbeam = "0.8.1"
clone_all = "0.1.1"
